--- a/es/index.html
+++ b/es/index.html
@@ -40,6 +40,9 @@
     </nav>
 
     <section class="hero">
+        <video autoplay muted loop playsinline class="hero-background-video">
+            <source src="../videos/background-hero.mp4" type="video/mp4">
+        </video>
         <div class="container">
             <div class="hero-content">
                 <h1 class="hero-title">Programa Educativo Alternativo sobre el Vapeo Juvenil</h1>
