--- a/index.html
+++ b/index.html
@@ -44,6 +44,9 @@
 
     <!-- Hero Section -->
     <section class="hero">
+        <video autoplay muted loop playsinline class="hero-background-video">
+            <source src="videos/background-hero.mp4" type="video/mp4">
+        </video>
         <div class="container">
             <div class="hero-content">
                 <h1 class="hero-title">Youth Vaping Alternative Program Education</h1>
